# suwen

./: .gitignore  Cargo.toml  Dockerfile.local  Readme.md  local.Dockerfile
suwen/: Cargo.toml
suwen-api/: Cargo.toml
suwen-api/src/: auth.rs  lib.rs  rss.rs  sitemap.rs  wrapper.rs
suwen-api/src/db/: kv.rs  mod.rs  query.rs  schema.rs  utils.rs
suwen-api/src/routes/: mod.rs  schema.rs
suwen-api/src/routes/middleware/: mod.rs
suwen-config/: Cargo.toml
suwen-config/src/: lib.rs
suwen-entity/: Cargo.toml
suwen-entity/src/entities/: comment.rs  content.rs  content_metadata.rs  content_metadata_tag.rs  identity.rs  like.rs  mod.rs  prelude.rs  site.rs  tag.rs  user.rs
suwen-llm/: Cargo.toml
suwen-llm/src/: lib.rs  utils.rs
suwen-markdown/: Cargo.toml
suwen-markdown/src/: highlighter.rs  lib.rs  markdown.rs  processor.rs  watcher.rs
suwen-markdown/src/importer/: mod.rs
suwen-markdown/src/importer/xlog/: content.rs  front_matter.rs  mod.rs  upload_attachment.rs
suwen-markdown/src/manager/: markdown.rs  mod.rs  watcher.rs
suwen-markdown/src/manager/importer/: mod.rs
suwen-markdown/src/manager/importer/xlog/: mod.rs  schema.rs
suwen-migration/: Cargo.toml
suwen-migration/src/: lib.rs  m20250802_051117_init.rs
suwen-ui/: package.json  svelte.config.js  vite.config.ts
suwen-ui/src/: app.css  app.d.ts  app.html  hooks.server.ts
suwen-ui/src/lib/: api.ts  type.ts
suwen-ui/src/lib/components/: articleContent.svelte  articleItem.svelte  articles.svelte  comments.svelte  detailShortItem.svelte  detailShorts.svelte  fallbackAvatar.svelte  footer.svelte  header.svelte  navibar.svelte  shortContent.svelte  shortItem.svelte  shorts.svelte  sortbar.svelte
suwen-ui/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
suwen-ui/src/routes/archives/: +page.server.ts  +page.svelte
suwen-ui/src/routes/articles/[article]/: +page.server.ts  +page.svelte
suwen-ui/src/routes/articles/[slug]/: +page.server.ts  +page.svelte
suwen-ui/src/routes/shorts/: +page.server.ts  +page.svelte
suwen-ui/src/routes/shorts/[short]/: +page.server.ts  +page.svelte
suwen-ui/src/routes/shorts/[slug]/: +page.server.ts  +page.svelte
suwen-ui/src/routes/tags/[tag]/: +page.server.ts  +page.svelte
suwen/src/: main.rs
