[workspace]
members = [
    'suwen',
    "suwen-api",
    "suwen-markdown",
    "suwen-migration",
    "suwen-entity",
]
default-members = ['suwen']
resolver = '2'

[workspace.package]
version = "0.1.0"
description = "A modern blogging platform built with Rust and Svelte"
edition = "2024"
publish = false

[workspace.dependencies]
suwen_markdown = { path = "suwen-markdown" }
suwen_api = { path = "suwen-api" }
suwen_migration = { path = "suwen-migration" }
suwen_entity = { path = "suwen-entity" }

axum-reverse-proxy = { version = "1.0.3", default-features = false }
axum = { version = "0.8.4", features = ["macros"] }
anyhow = "1.0.98"
autocorrect = "2.14.2"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.43", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.31"
image = { version = "0.25", features = ["webp"] }
mime2ext = "0.1.54"
pathdiff = "0.2.3"
pulldown-cmark = "0.13.0"
pulldown-cmark-to-cmark = "21.0.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = [
    "charset",
    "cookies",
    "gzip",
    "http2",
    "json",
    "rustls-tls",
    "stream",
], default-features = false }
sea-orm = { version = "1.1.0", default-features = false, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
] }
sea-orm-migration = "1.1.0"
serde = "1.0.219"
serde_json = "1.0.142"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["io", "rt"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
    "compression-zstd",
    "compression-gzip",
    "compression-br",
    "fs",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "json"] }
two-face = { version = "0.4.3", features = ["syntect-default-onig"] }
webp = "0.3.0"
yaml-rust2 = "0.10.3"
