[package]
name = "suwen_llm"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
suwen_config = { workspace = true }
suwen_markdown = { workspace = true }

anyhow = { workspace = true }
autocorrect = { workspace = true }
llm = { workspace = true }
tracing = { workspace = true }
