[package]
name = "suwen_markdown"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
suwen_entity = { workspace = true }

anyhow = { workspace = true }
autocorrect = { workspace = true }
chrono = { workspace = true }
pulldown-cmark = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
two-face = { workspace = true }
yaml-rust2 = { workspace = true }
