[package]
name = "suwen_markdown"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
suwen_entity = { workspace = true }

anyhow = { workspace = true }
arborium = { workspace = true }
autocorrect = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
lol_html = { workspace = true }
mime2ext = { workspace = true }
parking_lot = { workspace = true }
pathdiff = { workspace = true }
pulldown-cmark = { workspace = true }
pulldown-cmark-to-cmark = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
yaml-rust2 = { workspace = true }
