[package]
name = "suwen"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
suwen_markdown = { workspace = true }
suwen_api = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
